infra/k8s/monitoring.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-jaeger
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-jaeger
  template:
    metadata:
      labels:
        app: echo-jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 16686
        - containerPort: 4317
---
apiVersion: v1
kind: Service
metadata:
  name: echo-jaeger
  namespace: default
spec:
  ports:
  - name: ui
    port: 16686
    targetPort: 16686
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  selector:
    app: echo-jaeger
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-prometheus
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-prometheus
  template:
    metadata:
      labels:
        app: echo-prometheus
    spec:
      containers:
      - name: prometheus
        image: prom/prometheus:latest
        imagePullPolicy: IfNotPresent
        command: ["--config.file=/etc/prometheus/prometheus.yml"]
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prometheus-config-volume
          mountPath: /etc/prometheus/prometheus.yml
          subPath: prometheus.yml
      volumes:
      - name: prometheus-config-volume
        configMap:
          name: prometheus-config
---
apiVersion: v1
kind: Service
metadata:
  name: echo-prometheus
  namespace: default
spec:
  ports:
  - port: 9090
    targetPort: 9090
  selector:
    app: echo-prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-grafana
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-grafana
  template:
    metadata:
      labels:
        app: echo-grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: echo-grafana
  namespace: default
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: echo-grafana
