infra/k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-redis
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echo-redis
  template:
    metadata:
      labels:
        app: echo-redis
    spec:
      containers:
      - name: redis
        image: redis:7-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: echo-redis
  namespace: default
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: echo-redis
